<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewRutaActivity"
    android:paddingTop="24dp"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    >


    <EditText
        android:id="@+id/etNombreRuta"
        android:hint="@string/hint_nombreRuta"
        android:maxLength="25"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_width="0dp"
        android:layout_height="wrap_content"/>


    <EditText
        android:id="@+id/etExplorador"
        android:hint="@string/hint_explorador"
        android:maxLength="25"
        android:inputType="text"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="@id/etNombreRuta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_width="0dp"
        android:layout_height="wrap_content"/>



    <SeekBar
        android:id="@+id/etDiff"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:hint="@string/hint_dificultad"
        android:inputType="text"
        android:maxLength="25"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/etExplorador" />

    <RatingBar
        android:id="@+id/rbRating"
        android:numStars="5"
        android:stepSize="0.25"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/etDiff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



    <Button
        android:id="@+id/btSave"
        android:text="@string/label_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>